[gd_scene load_steps=4 format=3 uid="uid://cldk6gynsmbl8"]

[ext_resource type="Script" uid="uid://bbx78q61opnmd" path="res://Scripts/Skills/arc_beam.gd" id="1_x6y6f"]
[ext_resource type="Material" uid="uid://du40p3l8b4yok" path="res://Shaders/electric_beam_material.tres" id="2_w4eaf"]

[sub_resource type="Curve" id="Curve_x6y6f"]
_data = [Vector2(0.0418251, 0.19267511), 0.0, -0.3888755, 0, 0, Vector2(0.50190115, 0.72054136), 0.0, 0.0, 0, 0, Vector2(0.9543726, 0.17197454), 0.20939468, 0.0, 0, 0]
point_count = 3

[node name="ArcBeam" type="Area2D"]
collision_layer = 36
collision_mask = 18
monitoring = false
script = ExtResource("1_x6y6f")

[node name="TendrilContainer" type="Node2D" parent="."]

[node name="Tendril1" type="Line2D" parent="TendrilContainer"]
material = ExtResource("2_w4eaf")
width = 15.0
width_curve = SubResource("Curve_x6y6f")
default_color = Color(0.41545746, 0.13652623, 0.9999688, 0.9019608)
texture_mode = 2

[node name="Tendril2" type="Line2D" parent="TendrilContainer"]
material = ExtResource("2_w4eaf")
width = 15.0
width_curve = SubResource("Curve_x6y6f")
default_color = Color(0.41545746, 0.13652623, 0.9999688, 0.9019608)
texture_mode = 2

[node name="Tendril3" type="Line2D" parent="TendrilContainer"]
material = ExtResource("2_w4eaf")
width = 15.0
width_curve = SubResource("Curve_x6y6f")
default_color = Color(0.41545746, 0.13652623, 0.9999688, 0.9019608)
texture_mode = 2

[node name="BeamCollision" type="CollisionPolygon2D" parent="."]

[node name="CrackleTimer" type="Timer" parent="."]
